--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,13 +20,13 @@ jobs:
         distribution: adopt
     - name: Install dependencies
       run: |
-        apt update
-        apt install -y git emacs-nox curl
+        sudo apt-get update
+        sudo apt-get install -y git emacs-nox curl
     - name: Install cask
       run: |
         git clone https://github.com/cask/cask.git /tmp/cask
         cd /tmp/cask
-        HOME=/ make install
+        make install
     - name: Download plantuml.jar
       run: ./bin/download-plantuml.sh
     - name: Build & Test
